T4_tradutor/src/sintatico.output
Terminals unused in grammar

    MAIN
    ASPA_SIMPLES
    STRING


Grammar

    0 $accept: programa $end

    1 programa: lista_de_declaracoes

    2 lista_de_declaracoes: lista_de_declaracoes declaracao
    3                     | %empty

    4 declaracao: declaracao_de_variavel
    5           | declaracao_de_funcao
    6           | error

    7 $@1: %empty

    8 declaracao_de_variavel: tipo_de_variavel_id $@1 PONTO_VIRGULA

    9 $@2: %empty

   10 declaracao_de_funcao: tipo_de_variavel_id $@2 ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao

   11 definicao_de_funcao: ABRE_CHAVES comandos FECHA_CHAVES

   12 parametros: lista_de_parametros
   13           | %empty

   14 lista_de_parametros: lista_de_parametros VIRGULA parametro
   15                    | parametro

   16 parametro: tipo_de_variavel_id

   17 tipo_de_variavel_id: tipo_de_variavel id

   18 id: ID

   19 comando: bloco_de_comando
   20        | comando_unico
   21        | error

   22 comandos: comandos comando
   23         | %empty

   24 $@3: %empty

   25 bloco_de_comando: $@3 ABRE_CHAVES comandos FECHA_CHAVES

   26 comando_unico: comando_condicional
   27              | comando_iterativo
   28              | declaracao_de_variavel
   29              | chamada_de_retorno
   30              | comando_de_atribuicao
   31              | exp_or_empty PONTO_VIRGULA

   32 comando_condicional: IF ABRE_PARENTESES exp FECHA_PARENTESES comando_unico
   33                    | IF ABRE_PARENTESES exp FECHA_PARENTESES bloco_de_comando
   34                    | IF ABRE_PARENTESES exp FECHA_PARENTESES comando_unico ELSE comando_unico
   35                    | IF ABRE_PARENTESES exp FECHA_PARENTESES bloco_de_comando ELSE comando_unico
   36                    | IF ABRE_PARENTESES exp FECHA_PARENTESES comando_unico ELSE bloco_de_comando
   37                    | IF ABRE_PARENTESES exp FECHA_PARENTESES bloco_de_comando ELSE bloco_de_comando

   38 comando_iterativo: FOR ABRE_PARENTESES expressao_for PONTO_VIRGULA expressao_for PONTO_VIRGULA expressao_for FECHA_PARENTESES comando

   39 expressao_for: id ATRIB exp
   40              | exp_or_empty

   41 exp_or_empty: exp
   42             | %empty

   43 exp: exp GT exp
   44    | exp LT exp
   45    | exp EQ exp
   46    | exp NE exp
   47    | exp LE exp
   48    | exp GE exp
   49    | exp AND exp
   50    | exp OR exp
   51    | exp_list

   52 exp_list: exp_list CONSTRUTOR exp_list
   53         | exp_list FILTER exp_list
   54         | exp_list MAP exp_list
   55         | exp_aritmetica

   56 exp_aritmetica: termo
   57               | exp_aritmetica SOMA termo
   58               | exp_aritmetica SUB termo

   59 termo: fator
   60      | termo MULT fator
   61      | termo DIV fator

   62 fator: constante
   63      | func_call_exp
   64      | SUB fator
   65      | SOMA fator
   66      | TAIL_OR_NOT fator
   67      | TAIL_POP fator
   68      | HEADER fator
   69      | ID
   70      | ABRE_PARENTESES exp FECHA_PARENTESES

   71 comando_de_atribuicao: id ATRIB exp PONTO_VIRGULA

   72 func_call_exp: id ABRE_PARENTESES func_call_parameters FECHA_PARENTESES
   73              | id ABRE_PARENTESES FECHA_PARENTESES
   74              | READ ABRE_PARENTESES id FECHA_PARENTESES
   75              | WRITE ABRE_PARENTESES exp FECHA_PARENTESES
   76              | WRITELN ABRE_PARENTESES exp FECHA_PARENTESES

   77 func_call_parameters: func_call_parameters VIRGULA exp
   78                     | exp

   79 chamada_de_retorno: RETURN exp PONTO_VIRGULA

   80 tipo_de_variavel: INT
   81                 | FLOAT
   82                 | list

   83 list: INT LIST
   84     | FLOAT LIST

   85 constante: INTEGER_CONST
   86          | FLOAT_CONST
   87          | CONSTANTE_NIL
   88          | STRING_LITERAL


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 21
    ID <node> (258) 18 69
    INT <node> (259) 80 83
    FLOAT <node> (260) 81 84
    LIST <node> (261) 83 84
    CONSTANTE_NIL <node> (262) 87
    TAIL_OR_NOT <node> (263) 66
    HEADER <node> (264) 68
    TAIL_POP <node> (265) 67
    MAP <node> (266) 54
    FILTER <node> (267) 53
    CONSTRUTOR <node> (268) 52
    READ <node> (269) 74
    WRITE <node> (270) 75
    WRITELN <node> (271) 76
    MAIN <node> (272)
    RETURN <node> (273) 79
    IF <node> (274) 32 33 34 35 36 37
    ELSE <node> (275) 34 35 36 37
    FOR <node> (276) 38
    AND <node> (277) 49
    OR <node> (278) 50
    LT <node> (279) 44
    LE <node> (280) 47
    EQ <node> (281) 45
    GT <node> (282) 43
    GE <node> (283) 48
    NE <node> (284) 46
    SOMA <node> (285) 57 65
    SUB <node> (286) 58 64
    MULT <node> (287) 60
    DIV <node> (288) 61
    VIRGULA <node> (289) 14 77
    PONTO_VIRGULA <node> (290) 8 31 38 71 79
    ASPA_SIMPLES <node> (291)
    ATRIB <node> (292) 39 71
    ABRE_PARENTESES <node> (293) 10 32 33 34 35 36 37 38 70 72 73 74 75 76
    FECHA_PARENTESES <node> (294) 10 32 33 34 35 36 37 38 70 72 73 74 75 76
    ABRE_CHAVES <node> (295) 11 25
    FECHA_CHAVES <node> (296) 11 25
    FLOAT_CONST <node> (297) 86
    INTEGER_CONST <node> (298) 85
    STRING_LITERAL <node> (299) 88
    STRING <node> (300)
    "then" (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    programa <node> (48)
        on left: 1
        on right: 0
    lista_de_declaracoes <node> (49)
        on left: 2 3
        on right: 1 2
    declaracao <node> (50)
        on left: 4 5 6
        on right: 2
    declaracao_de_variavel <node> (51)
        on left: 8
        on right: 4 28
    $@1 (52)
        on left: 7
        on right: 8
    declaracao_de_funcao <node> (53)
        on left: 10
        on right: 5
    $@2 (54)
        on left: 9
        on right: 10
    definicao_de_funcao <node> (55)
        on left: 11
        on right: 10
    parametros <node> (56)
        on left: 12 13
        on right: 10
    lista_de_parametros <node> (57)
        on left: 14 15
        on right: 12 14
    parametro <node> (58)
        on left: 16
        on right: 14 15
    tipo_de_variavel_id <node> (59)
        on left: 17
        on right: 8 10 16
    id <node> (60)
        on left: 18
        on right: 17 39 71 72 73 74
    comando <node> (61)
        on left: 19 20 21
        on right: 22 38
    comandos <node> (62)
        on left: 22 23
        on right: 11 22 25
    bloco_de_comando <node> (63)
        on left: 25
        on right: 19 33 35 36 37
    $@3 (64)
        on left: 24
        on right: 25
    comando_unico <node> (65)
        on left: 26 27 28 29 30 31
        on right: 20 32 34 35 36
    comando_condicional <node> (66)
        on left: 32 33 34 35 36 37
        on right: 26
    comando_iterativo <node> (67)
        on left: 38
        on right: 27
    expressao_for <node> (68)
        on left: 39 40
        on right: 38
    exp_or_empty <node> (69)
        on left: 41 42
        on right: 31 40
    exp <node> (70)
        on left: 43 44 45 46 47 48 49 50 51
        on right: 32 33 34 35 36 37 39 41 43 44 45 46 47 48 49 50 70 71 75 76 77 78 79
    exp_list <node> (71)
        on left: 52 53 54 55
        on right: 51 52 53 54
    exp_aritmetica <node> (72)
        on left: 56 57 58
        on right: 55 57 58
    termo <node> (73)
        on left: 59 60 61
        on right: 56 57 58 60 61
    fator <node> (74)
        on left: 62 63 64 65 66 67 68 69 70
        on right: 59 60 61 64 65 66 67 68
    comando_de_atribuicao <node> (75)
        on left: 71
        on right: 30
    func_call_exp <node> (76)
        on left: 72 73 74 75 76
        on right: 63
    func_call_parameters <node> (77)
        on left: 77 78
        on right: 72 77
    chamada_de_retorno <node> (78)
        on left: 79
        on right: 29
    tipo_de_variavel <node> (79)
        on left: 80 81 82
        on right: 17
    list <node> (80)
        on left: 83 84
        on right: 82
    constante <node> (81)
        on left: 85 86 87 88
        on right: 62


State 0

    0 $accept: • programa $end

    $end   reduce using rule 3 (lista_de_declaracoes)
    error  reduce using rule 3 (lista_de_declaracoes)
    INT    reduce using rule 3 (lista_de_declaracoes)
    FLOAT  reduce using rule 3 (lista_de_declaracoes)

    programa              go to state 1
    lista_de_declaracoes  go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    1 programa: lista_de_declaracoes •
    2 lista_de_declaracoes: lista_de_declaracoes • declaracao

    error  shift, and go to state 4
    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    $end  reduce using rule 1 (programa)

    declaracao              go to state 7
    declaracao_de_variavel  go to state 8
    declaracao_de_funcao    go to state 9
    tipo_de_variavel_id     go to state 10
    tipo_de_variavel        go to state 11
    list                    go to state 12


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    6 declaracao: error •

    $end   reduce using rule 6 (declaracao)
    error  reduce using rule 6 (declaracao)
    INT    reduce using rule 6 (declaracao)
    FLOAT  reduce using rule 6 (declaracao)


State 5

   80 tipo_de_variavel: INT •
   83 list: INT • LIST

    LIST  shift, and go to state 13

    ID  reduce using rule 80 (tipo_de_variavel)


State 6

   81 tipo_de_variavel: FLOAT •
   84 list: FLOAT • LIST

    LIST  shift, and go to state 14

    ID  reduce using rule 81 (tipo_de_variavel)


State 7

    2 lista_de_declaracoes: lista_de_declaracoes declaracao •

    $end   reduce using rule 2 (lista_de_declaracoes)
    error  reduce using rule 2 (lista_de_declaracoes)
    INT    reduce using rule 2 (lista_de_declaracoes)
    FLOAT  reduce using rule 2 (lista_de_declaracoes)


State 8

    4 declaracao: declaracao_de_variavel •

    $end   reduce using rule 4 (declaracao)
    error  reduce using rule 4 (declaracao)
    INT    reduce using rule 4 (declaracao)
    FLOAT  reduce using rule 4 (declaracao)


State 9

    5 declaracao: declaracao_de_funcao •

    $end   reduce using rule 5 (declaracao)
    error  reduce using rule 5 (declaracao)
    INT    reduce using rule 5 (declaracao)
    FLOAT  reduce using rule 5 (declaracao)


State 10

    8 declaracao_de_variavel: tipo_de_variavel_id • $@1 PONTO_VIRGULA
   10 declaracao_de_funcao: tipo_de_variavel_id • $@2 ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao

    PONTO_VIRGULA    reduce using rule 7 ($@1)
    ABRE_PARENTESES  reduce using rule 9 ($@2)

    $@1  go to state 15
    $@2  go to state 16


State 11

   17 tipo_de_variavel_id: tipo_de_variavel • id

    ID  shift, and go to state 17

    id  go to state 18


State 12

   82 tipo_de_variavel: list •

    ID  reduce using rule 82 (tipo_de_variavel)


State 13

   83 list: INT LIST •

    ID  reduce using rule 83 (list)


State 14

   84 list: FLOAT LIST •

    ID  reduce using rule 84 (list)


State 15

    8 declaracao_de_variavel: tipo_de_variavel_id $@1 • PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 19


State 16

   10 declaracao_de_funcao: tipo_de_variavel_id $@2 • ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao

    ABRE_PARENTESES  shift, and go to state 20


State 17

   18 id: ID •

    PONTO_VIRGULA    reduce using rule 18 (id)
    ABRE_PARENTESES  reduce using rule 18 (id)


State 18

   17 tipo_de_variavel_id: tipo_de_variavel id •

    PONTO_VIRGULA    reduce using rule 17 (tipo_de_variavel_id)
    ABRE_PARENTESES  reduce using rule 17 (tipo_de_variavel_id)


State 19

    8 declaracao_de_variavel: tipo_de_variavel_id $@1 PONTO_VIRGULA •

    $end   reduce using rule 8 (declaracao_de_variavel)
    error  reduce using rule 8 (declaracao_de_variavel)
    INT    reduce using rule 8 (declaracao_de_variavel)
    FLOAT  reduce using rule 8 (declaracao_de_variavel)


State 20

   10 declaracao_de_funcao: tipo_de_variavel_id $@2 ABRE_PARENTESES • parametros FECHA_PARENTESES definicao_de_funcao

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    FECHA_PARENTESES  reduce using rule 13 (parametros)

    parametros           go to state 21
    lista_de_parametros  go to state 22
    parametro            go to state 23
    tipo_de_variavel_id  go to state 24
    tipo_de_variavel     go to state 155
    list                 go to state 12


State 21

   10 declaracao_de_funcao: tipo_de_variavel_id $@2 ABRE_PARENTESES parametros • FECHA_PARENTESES definicao_de_funcao

    FECHA_PARENTESES  shift, and go to state 25


State 22

   12 parametros: lista_de_parametros •
   14 lista_de_parametros: lista_de_parametros • VIRGULA parametro

    VIRGULA  shift, and go to state 26

    FECHA_PARENTESES  reduce using rule 12 (parametros)


State 23

   15 lista_de_parametros: parametro •

    VIRGULA           reduce using rule 15 (lista_de_parametros)
    FECHA_PARENTESES  reduce using rule 15 (lista_de_parametros)


State 24

   16 parametro: tipo_de_variavel_id •

    VIRGULA           reduce using rule 16 (parametro)
    FECHA_PARENTESES  reduce using rule 16 (parametro)


State 25

   10 declaracao_de_funcao: tipo_de_variavel_id $@2 ABRE_PARENTESES parametros FECHA_PARENTESES • definicao_de_funcao

    ABRE_CHAVES  shift, and go to state 27

    definicao_de_funcao  go to state 28


State 26

   14 lista_de_parametros: lista_de_parametros VIRGULA • parametro

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    parametro            go to state 29
    tipo_de_variavel_id  go to state 24
    tipo_de_variavel     go to state 155
    list                 go to state 12


State 27

   11 definicao_de_funcao: ABRE_CHAVES • comandos FECHA_CHAVES

    error            reduce using rule 23 (comandos)
    ID               reduce using rule 23 (comandos)
    INT              reduce using rule 23 (comandos)
    FLOAT            reduce using rule 23 (comandos)
    CONSTANTE_NIL    reduce using rule 23 (comandos)
    TAIL_OR_NOT      reduce using rule 23 (comandos)
    HEADER           reduce using rule 23 (comandos)
    TAIL_POP         reduce using rule 23 (comandos)
    READ             reduce using rule 23 (comandos)
    WRITE            reduce using rule 23 (comandos)
    WRITELN          reduce using rule 23 (comandos)
    RETURN           reduce using rule 23 (comandos)
    IF               reduce using rule 23 (comandos)
    FOR              reduce using rule 23 (comandos)
    SOMA             reduce using rule 23 (comandos)
    SUB              reduce using rule 23 (comandos)
    PONTO_VIRGULA    reduce using rule 23 (comandos)
    ABRE_PARENTESES  reduce using rule 23 (comandos)
    ABRE_CHAVES      reduce using rule 23 (comandos)
    FECHA_CHAVES     reduce using rule 23 (comandos)
    FLOAT_CONST      reduce using rule 23 (comandos)
    INTEGER_CONST    reduce using rule 23 (comandos)
    STRING_LITERAL   reduce using rule 23 (comandos)

    comandos  go to state 30


State 28

   10 declaracao_de_funcao: tipo_de_variavel_id $@2 ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao •

    $end   reduce using rule 10 (declaracao_de_funcao)
    error  reduce using rule 10 (declaracao_de_funcao)
    INT    reduce using rule 10 (declaracao_de_funcao)
    FLOAT  reduce using rule 10 (declaracao_de_funcao)


State 29

   14 lista_de_parametros: lista_de_parametros VIRGULA parametro •

    VIRGULA           reduce using rule 14 (lista_de_parametros)
    FECHA_PARENTESES  reduce using rule 14 (lista_de_parametros)


State 30

   11 definicao_de_funcao: ABRE_CHAVES comandos • FECHA_CHAVES
   22 comandos: comandos • comando

    error            shift, and go to state 31
    ID               shift, and go to state 32
    INT              shift, and go to state 5
    FLOAT            shift, and go to state 6
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    RETURN           shift, and go to state 40
    IF               shift, and go to state 41
    FOR              shift, and go to state 42
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FECHA_CHAVES     shift, and go to state 46
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    PONTO_VIRGULA  reduce using rule 42 (exp_or_empty)
    ABRE_CHAVES    reduce using rule 24 ($@3)

    declaracao_de_variavel  go to state 50
    tipo_de_variavel_id     go to state 51
    id                      go to state 52
    comando                 go to state 53
    bloco_de_comando        go to state 54
    $@3                     go to state 55
    comando_unico           go to state 56
    comando_condicional     go to state 57
    comando_iterativo       go to state 58
    exp_or_empty            go to state 59
    exp                     go to state 60
    exp_list                go to state 61
    exp_aritmetica          go to state 62
    termo                   go to state 63
    fator                   go to state 64
    comando_de_atribuicao   go to state 65
    func_call_exp           go to state 66
    chamada_de_retorno      go to state 67
    tipo_de_variavel        go to state 156
    list                    go to state 12
    constante               go to state 68


State 31

   21 comando: error •

    error            reduce using rule 21 (comando)
    ID               reduce using rule 21 (comando)
    INT              reduce using rule 21 (comando)
    FLOAT            reduce using rule 21 (comando)
    CONSTANTE_NIL    reduce using rule 21 (comando)
    TAIL_OR_NOT      reduce using rule 21 (comando)
    HEADER           reduce using rule 21 (comando)
    TAIL_POP         reduce using rule 21 (comando)
    READ             reduce using rule 21 (comando)
    WRITE            reduce using rule 21 (comando)
    WRITELN          reduce using rule 21 (comando)
    RETURN           reduce using rule 21 (comando)
    IF               reduce using rule 21 (comando)
    FOR              reduce using rule 21 (comando)
    SOMA             reduce using rule 21 (comando)
    SUB              reduce using rule 21 (comando)
    PONTO_VIRGULA    reduce using rule 21 (comando)
    ABRE_PARENTESES  reduce using rule 21 (comando)
    ABRE_CHAVES      reduce using rule 21 (comando)
    FECHA_CHAVES     reduce using rule 21 (comando)
    FLOAT_CONST      reduce using rule 21 (comando)
    INTEGER_CONST    reduce using rule 21 (comando)
    STRING_LITERAL   reduce using rule 21 (comando)


State 32

   18 id: ID •
   69 fator: ID •
